--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.dicoding.tourismapp"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -37,6 +36,7 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'com.dicoding.tourismapp'
 }
 
 dependencies {
