--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.dicoding.tourismapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,7 +26,8 @@
         <activity
             android:name=".detail.DetailTourismActivity"
             android:label="@string/title_activity_detail_home"
-            android:theme="@style/Theme.TourismApp.NoActionBar" />
+            android:theme="@style/Theme.TourismApp.NoActionBar"
+            android:exported="true"/>
     </application>
 
 </manifest>
